k8s/tasky.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: wiz
  labels:
    app: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: webapp-sa
      containers:
        - name: webapp
          image: 051826720579.dkr.ecr.us-east-2.amazonaws.com/saad-wiz-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 1
            failureThreshold: 3
          resources: {}
