k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-svc
  namespace: wiz
  labels:
    app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: 8080
